kustomize/base/service-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: postgresql
    component: pgadmin4
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: postgresql
